c/examples/writing-a-c-compiler-tests/tests/chapter_18/invalid_parse/extra_credit/union_struct_tag.c
// can't use 'struct' as the keyword for a union declaration
union struct {
    int a;
};

int main(void) {
    return 0;
}